[build-system]
requires = ["aiohttp >=3.8.3","pytest-asyncio==0.19.0,flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyAduro"
authors = [
    {name = "Merca Ovnerud", email = "merca.ovnerud@proton.me"},
]
readme = "README.md"
license = { file="LICENSE" }

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/merca/pyAnduro"
