[build-system]
requires = [
    "aiohttp >=3.8.3",
    "flit_core >=3.2,<4",
    "pydantic >=1.10.2",
]
build-backend = "flit_core.buildapi"

[project]
name = "pyaduro"
authors = [
    {name = "Merca Ovnerud", email = "merca.ovnerud@proton.me"},
]
readme = "README.md"
license = { file="LICENSE" }

requires-python = ">=3.10"

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/merca/pyAduro"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3",
    "pytest-cov",
    "pytest-asyncio >=0.19.0",
    "aiohttp >=3.8.3",
    "pydantic >=1.10.2",
    "pytest-mock",
]