[metadata]
name=pyAnduro
description=Python library for Anduro Stove
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/merca/pyAnduro
author=Merca Ovnerud
author_email=merca.ovnerud@proton.me
license=MIT
license_file=LICENSE

[options]
python_requires=>=3.9

[aliases]
test=pytest

[options.extras_require]
test = 
    pytest >= 7.1.3
    pytest-asyncio >= 0.19.0

all =
    %(test)s

[isort]
profile=black